2002-09-20  Sam Steingold  <sds@gnu.org>

	fix the OBSOLETE-ACTION patch
	* init.lisp (warn): the preliminary definition must return NIL
	(open-for-load): use SYS::BUILT-IN-STREAM-CLOSE instead of CLOSE

2002-09-20  Sam Steingold  <sds@gnu.org>

	error reporting clean-up
	* charstrg.d (coerce_ss, coerce_imm_ss, coerce_normal_ss)
	(coerce_imm_normal_ss): use fehler_string() instead of explicit
	fehler(type_error,...)
	(test_char_arg): renamed from test_newchar_arg(), use fehler_char()
	(STANDARD-CHAR-P, GRAPHIC-CHAR-P, CHAR-WIDTH, STRING-CHAR-P)
	(BASE-CHAR-P, ALPHA-CHAR-P, UPPER-CASE-P, LOWER-CASE-P)
	(BOTH-CASE-P, DIGIT-CHAR-P, ALPHANUMERICP, CHAR-CODE)
	(CHAR-UPCASE, CHAR-DOWNCASE, CHAR-INT, CHAR-NAME, STORE-CHAR)
	(STORE-SCHAR): use test_char_arg()

2002-09-20  Sam Steingold  <sds@gnu.org>

	LOAD now takes an additional :OBSOLETE-ACTION keyword
	* init.lisp (open-for-load): new function
	(load): use it to open the file
	(*load-obsolete-action*): new user variable

2002-09-20  Stefan Kain  <stefan.kain@freenet.de>

	* constsym.d, subr.d, encoding.d, predtype.d, intlog.d:
	* charstrg.d, arihppa.d: translated all comments

2002-09-20  John Hinsdale <hin@alma.com>

	* modules/oracle: Fix Makefile format and vars to work
	on more systems; take ORACLE_HOME from environment.

2002-09-20  Will Newton  <will@misconception.org.uk>

	* ariarm.d: ARM assembler code updated to the newer gas syntax

2002-09-19  Sam Steingold  <sds@gnu.org>

	* lispbibl.d [SPARC GCC3]: disable global register declarations
	Suggested by Will Newton <will@misconception.org.uk>

2002-09-19  Sam Steingold  <sds@gnu.org>

	* lisparit.d (log_digits): fixed last patch: make sure
	that the saved value is not more precise than it is accurate

2002-09-18  Sam Steingold  <sds@gnu.org>

	* makemake.in: treat floatparam.[ch] just like intparam.[ch]

2002-09-18  Sam Steingold  <sds@gnu.org>

	* m4/fenv_default.m4: fixed AC_DEFINE macro calls

2002-09-18  Sam Steingold  <sds@gnu.org>
