@@ -224,7 +224,6 @@ LISPSYM(values,"VALUES",lisp)
 LISPSYM(values_list,"VALUES-LIST",lisp)
 LISPSYM(driver,"DRIVER",system)
 LISPSYM(unwind_to_driver,"UNWIND-TO-DRIVER",system)
-LISPSYM(unwind_to_top,"UNWIND-TO-TOP",system)
 LISPSYM(macro_function,"MACRO-FUNCTION",lisp)
 LISPSYM(macroexpand,"MACROEXPAND",lisp)
 LISPSYM(macroexpand_1,"MACROEXPAND-1",lisp)
