@@ -257,8 +257,7 @@ LISPFUN(mapcon,2,0,rest,nokey,0,NIL)
 LISPFUN(values,0,0,rest,nokey,0,NIL)
 LISPFUNN(values_list,1)
 LISPFUNN(driver,1)
-LISPFUNN(unwind_to_driver,0)
-LISPFUNN(unwind_to_top,0)
+LISPFUNN(unwind_to_driver,1)
 LISPFUN(macro_function,1,1,norest,nokey,0,NIL)
 LISPFUN(macroexpand,1,1,norest,nokey,0,NIL)
 LISPFUN(macroexpand_1,1,1,norest,nokey,0,NIL)
